test_scores/negative_dimers/features/O94972.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/O94972.pkl.xz